welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:17: error: illegal start of simple expression
      setPos(,getY()+1)
             ^ZigZag:21: error: ')' expected but '}' found.
        compteur+=1}}
                    ^